[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["M. Safarian <ma.hiccup@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.16.0"
fastapi = "^0.71.0"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
passlib = "^1.7.4"
python-jose = "^3.3.0"
email-validator = "^1.1.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
